--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
     background: url(images/bg-hero-desktop.svg);
     background-repeat: no-repeat;
     background-color: var(--Very-Pale-Cyan);
+    background-size: cover;
     min-height: 45rem;
     padding: 0 7%;
 }
@@ -138,7 +139,7 @@ body {
 .description-col p {
     font-family: 'Open Sans', sans-serif;
     margin-top: 1rem;
-    width: 95%;
+    width: 80%;
     color: var(--Grayish-Blue);
 }
 
@@ -361,8 +362,8 @@ ion-icon:hover {
     }
   
     .description-head h1 {
-      font-size: 1.7rem;
-      width: 27rem;
+      font-size: 1.6rem;
+      width: 26rem;
       margin-bottom: 1rem;
     }
   
@@ -527,8 +528,13 @@ ion-icon:hover {
        }
 
        .description-head button {
-        margin-inline: 7.5rem;
         width: 19rem;
+       }
+
+       .btn {
+        display: flex;
+        justify-content: center;
+        align-items: center;
        }
 
        .description-col {
@@ -536,6 +542,10 @@ ion-icon:hover {
        }
        .middle img {
         margin-top: 4rem;
+       }
+
+       .information p {
+        width: 50%;
        }
        .footer-content {
         flex-direction: column; 
