--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ body {
 
 .navigation > button {
     display: block;
-    width: 11rem;
+    width: 12rem;
     height: 2.5rem;
     border: none;
     outline: none;
@@ -149,6 +149,10 @@ body {
     gap: 2rem;
 }
 
+.middle .description-col p {
+  width: 90%;
+}
+
 .middle img {
     width: 90%;
     margin-left: 2rem;
@@ -174,14 +178,14 @@ body {
 
 .single-col button {
     border-radius: 1.8rem;
-    height: 4rem;
+    height: 4.5rem;
     background-color: var(--Primary-Pink);
     color: #fff;
     box-shadow: 0.1rem 0.4rem 0.4rem rgba(77, 75, 75, 0.178);
     cursor: pointer;
-    width: 20rem;
+    width: 21.5rem;
     border: none;
-    font-size: 1rem;
+    font-size: 1.3rem;
     font-weight: 700;
     font-family: 'Open Sans', sans-serif;
     transition: button 0.5s;
